# nomba-checkout

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
bubble_plugin/: element.js  index.html  plugin.js
checkout/: admin.py  models.py  permissions.py  serializers.py  urls.py
checkout/migrations/: 0001_initial.py  0002_alter_payment_status.py  0003_remove_transferlog_dev_remove_payment_dev_and_more.py  0004_remove_transferlog_dev_id.py
checkout/views/: card.py  dev.py  payment.py  transfer.py  webhook.py
config/: settings.py  urls.py
services/: banks.py  nomba.py  payout.py
