[project]
name = "nomba-checkout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url==2.2.0",
    "django==5.0.6",
    "django-cors-headers==4.4.0",
    "djangorestframework==3.15.2",
    "gunicorn==22.0.0",
    "nomba-python==0.1.1",
    "psycopg2-binary==2.9.9",
    "python-decouple==3.8",
    "whitenoise==6.7.0",
]
